Change the name and the description of this package

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nuxt-sample",
+  "name": "nuxt-wordpress",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "Nuxt.js with WP REST API",
   "author": "dai",
   "private": true,
   "scripts": {
